Fix header image and alignment

--- a/public/css/icinga/header-elements.less
+++ b/public/css/icinga/header-elements.less
@@ -12,6 +12,7 @@
 }
 
 #logo img {
+  width: 100px;
   margin-left: 1.5em;
   margin-top: 0.8em;
 }
