--- a/public/css/icinga/login.less
+++ b/public/css/icinga/login.less
@@ -6,19 +6,13 @@
   height: 100%;
 
   .logo {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 75%;
     text-align: center;
   }
 
   .image {
-    position: absolute;
-    bottom: 1em;
-    left: 0px;
-    right: 0px;
+    padding-top: 5%;
+    margin-left: auto;
+    margin-right: auto;
     text-align: center;
   }
 
@@ -70,7 +64,7 @@
   form {
     margin-left: auto;
     margin-right: auto;
-    width: 19.5em;
+    width: 18em;
     font-size: 20px;
   }
 
