--- a/public/css/icinga/menu.less
+++ b/public/css/icinga/menu.less
@@ -216,13 +216,13 @@
   border: none;
   width: 100%;
   border-radius: 0;
-  height: 2.7em;
+  height: 2.8em;
   display: block;
   outline: none;
   background-color: transparent;
   background-image: url('../img/icons/search.png');
   background-repeat: no-repeat;
-  background-position: 1.2em center;
+  background-position: 1.15em center;
   color: @colorTextDefault;
 }
 
