--- a/public/css/icinga/setup.less
+++ b/public/css/icinga/setup.less
@@ -8,13 +8,10 @@
 #setup {
   .header {
     width: 100%;
-    height: 5.4em;
+    height: 5.5em;
     background-color: @icinga-blue;
     border-bottom: 1px solid #d9d9d9d;
     text-align: center;
-    -webkit-box-shadow: 0 3px 7px -3px #000;
-    -moz-box-shadow: 0 3px 7px -3px #000;
-    box-shadow: 0 3px 7px -3px #000;
 
 
     img {
